--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,43 +1,41 @@
 {
-  "env": {
-    "es6": true,
-    "node": true,
-    "jasmine": true
-  },
-  "extends": [
-    "standard"
-  ],
-  "globals": {
-    "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly"
-  },
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaVersion": 11,
-    "sourceType": "module"
-  },
-  "plugins": [
-    "@typescript-eslint"
-  ],
-  "rules": {
-    "max-len": ["error", { "code": 160, "ignoreStrings": true }],
-    "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": [
-      "error",
-      {
-        "vars": "all",
-        "args": "after-used",
-        "ignoreRestSiblings": true,
-        "argsIgnorePattern": "^_"
-      }
-    ],
-    "quotes": ["error", "single", { "avoidEscape": true, "allowTemplateLiterals": true} ],
-    "func-style": [
-      "error",
-      "expression"
-    ],
-    "semi": ["off"],
-    "@typescript-eslint/semi": ["error", "always"],
-    "sort-imports": "error"
-  }
+    "env": {
+        "es6": true,
+        "node": true,
+        "jasmine": true
+    },
+    "extends": ["standard"],
+    "globals": {
+        "Atomics": "readonly",
+        "SharedArrayBuffer": "readonly"
+    },
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaVersion": 11,
+        "sourceType": "module"
+    },
+    "plugins": ["@typescript-eslint"],
+    "rules": {
+        // These are handled by prettier
+        "max-len": "off",
+        "space-before-function-paren": "off",
+        "quotes": "off",
+        "semi": "off",
+        "indent": "off",
+        "comma-dangle": "off",
+        "@typescript-eslint/semi": "off",
+
+        "func-style": ["error", "expression"],
+        "sort-imports": "error",
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": [
+            "error",
+            {
+                "vars": "all",
+                "args": "after-used",
+                "ignoreRestSiblings": true,
+                "argsIgnorePattern": "^_"
+            }
+        ]
+    }
 }
