--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "TypeScript SDK for Sidetree",
     "repository": "https://github.com/meshx-org/sidetree-sdk",
     "license": "Apache-2.0",
-    "main": "dist/lib/index.js",
-    "types": "dist/lib/index.d.ts",
+    "main": "dist/src/index.js",
+    "types": "dist/src/index.d.ts",
     "dependencies": {
         "@transmute/ed25519-key-pair": "0.7.0-unstable.58",
         "@transmute/jose-ld": "0.7.0-unstable.58",
@@ -41,11 +41,11 @@
         "typescript": "3.9.6"
     },
     "scripts": {
-        "build": "tsc && copyfiles \"lib/**/*.json\" dist && copyfiles \"tests/**/*.js*\" dist && copyfiles \"package.json\" dist",
+        "build": "tsc && copyfiles \"src/**/*.json\" dist && copyfiles \"tests/**/*.js*\" dist && copyfiles \"package.json\" dist",
         "test": "npm run build && nyc jasmine --config=./jasmine.json",
-        "lint": "eslint --ext ts lib/ tests/",
+        "lint": "eslint --ext ts src/ tests/",
         "format": "prettier --write .",
-        "lint:fix": "eslint --ext ts lib/ tests/ --fix"
+        "lint:fix": "eslint --ext ts src/ tests/ --fix"
     },
     "husky": {
         "hooks": {
@@ -59,8 +59,8 @@
             ".ts"
         ],
         "include": [
-            "dist/lib/**",
-            "lib/**"
+            "dist/src/**",
+            "src/**"
         ],
         "exclude": [
             "**/index.d.ts",
