--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
         "forceConsistentCasingInFileNames": true
     },
     "include": [
-        "./lib/**/*.ts",
+        "./src/**/*.ts",
         "./tests/**/*.ts"
     ]
 }
