--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,6 +21,6 @@ jobs:
                   registry-url: 'https://npm.pkg.github.com'
 
             - run: npm ci
-
+            - run: npm run build
             - run: npm publish --access public
               
