--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,7 +9,21 @@ env:
     NODE_AUTH_TOKEN: ${{ secrets.GHPR_TOKEN }}
 
 jobs:
-    deploy_release:
+    #publish-npm:
+    #    name: Publish NPM
+    #    needs: test
+    #    runs-on: ubuntu-latest
+    #    steps:
+    #    - uses: actions/checkout@v1
+    #    - uses: actions/setup-node@v1
+    #      with:
+    #        node-version: 16
+    #        registry-url: https://registry.npmjs.org/
+    #    - run: npm publish
+    #      env:
+    #        NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+
+    publish-gpr:
         runs-on: ubuntu-latest
 
         steps:
@@ -23,4 +37,5 @@ jobs:
             - run: npm ci
             - run: npm run build
             - run: npm publish --access public
-              
+              env:
+                NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
