--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,8 +2,9 @@ name: Publish Package
 
 on:
     workflow_dispatch:
-    release:
-        types: [published]
+    push:
+        branches:
+            - main
 
 env:
     NODE_AUTH_TOKEN: ${{ secrets.GHPR_TOKEN }}
@@ -32,10 +33,26 @@ jobs:
             - uses: actions/setup-node@v1
               with:
                   node-version: 16
-                  registry-url: 'https://npm.pkg.github.com'
+                  registry-url: "https://npm.pkg.github.com"
+
+            - name: Automated Version Bump
+              uses: phips28/gh-action-bump-version@master
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              with:
+                  tag-prefix: "v"
+                  commit-message: 'CI: bumps version to {{version}} [skip ci]'
+                  default: prerelease
+                  minor-wording: "add,added,Adds,new"
+                  major-wording: "MAJOR,cut-major"
+                  patch-wording:
+                      "patch,fixes" # Providing patch-wording will override commits
+                      # defaulting to a patch bump.
+                  rc-wording: "RELEASE,alpha"
 
             - run: npm ci
             - run: npm run build
+
             - run: npm publish --access public
               env:
-                NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
