--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     },
     "dependencies": {
         "@transmute/ed25519-key-pair": "0.7.0-unstable.58",
-        "@transmute/secp256k1-key-pair": "0.7.0-unstable.58",
         "@transmute/jose-ld": "0.7.0-unstable.58",
+        "@transmute/secp256k1-key-pair": "0.7.0-unstable.58",
         "@waiting/base64": "4.2.9",
         "canonicalize": "1.0.8",
         "multihashes": "0.4.14",
@@ -38,7 +38,7 @@
         "eslint-plugin-prefer-arrow": "^1.2.2",
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-standard": "^4.0.1",
-        "husky": "1.3.1",
+        "husky": "^7.0.4",
         "jasmine": "^3.8.0",
         "jasmine-reporters": "^2.4.0",
         "jasmine-spec-reporter": "4.2.1",
@@ -53,7 +53,8 @@
         "test": "npm run build && nyc jasmine --config=./jasmine.json",
         "lint": "eslint --ext ts src/ tests/",
         "format": "prettier --write .",
-        "lint:fix": "eslint --ext ts src/ tests/ --fix"
+        "lint:fix": "eslint --ext ts src/ tests/ --fix",
+        "prepare": "husky install"
     },
     "husky": {
         "hooks": {
