--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,17 +2,14 @@
     "compilerOptions": {
         "target": "es2016" /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', or 'ESNEXT'. */,
         "module": "commonjs" /* Specify module code generation: 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */,
-        "lib": [
-            "es2017",
-            "dom"
-        ] /* Specify library files to be included in the compilation:  */,
+        "lib": ["es2017", "dom"] /* Specify library files to be included in the compilation:  */,
         "declaration": true /* Generates corresponding '.d.ts' file. */,
         "sourceMap": true /* Generates corresponding '.map' file. */,
         "outDir": "./dist" /* Redirect output structure to the directory. */,
         /* Strict Type-Checking Options */
         "strict": true /* Enable all strict type-checking options. */,
-        "noImplicitAny": true, /* Raise error on expressions and declarations with an implied 'any' type. */
-        "strictNullChecks": true, /* Enable strict null checks. */
+        "noImplicitAny": true /* Raise error on expressions and declarations with an implied 'any' type. */,
+        "strictNullChecks": true /* Enable strict null checks. */,
         /* Additional Checks */
         "noUnusedLocals": true /* Report errors on unused locals. */,
         "noUnusedParameters": true /* Report errors on unused parameters. */,
@@ -21,11 +18,8 @@
         /* Module Resolution Options */
         // "typeRoots": []                        /* List of folders to include type definitions from. */
         "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
-        "resolveJsonModule": true, /* Allow json modules to be imported and enable json type checking */
+        "resolveJsonModule": true /* Allow json modules to be imported and enable json type checking */,
         "forceConsistentCasingInFileNames": true
     },
-    "include": [
-        "./src/**/*.ts",
-        "./tests/**/*.ts"
-    ]
+    "include": ["./src/**/*.ts", "./tests/**/*.ts"]
 }
