--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "license": "Apache-2.0",
     "main": "dist/src/index.js",
     "types": "dist/src/index.d.ts",
+    "files": [
+        "dist/**/*",
+        "src/**/*"
+    ],
     "repository": {
         "type": "git",
         "url": "git+https://github.com/meshx-org/sidetree-sdk.git"
