--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
         "eslint-plugin-prefer-arrow": "^1.2.3",
         "eslint-plugin-promise": "^6.1.1",
         "eslint-plugin-standard": "^5.0.0",
-        "husky": "^8.0.1",
         "jasmine": "^4.3.0",
         "jasmine-reporters": "^2.5.2",
         "jasmine-spec-reporter": "7.0.0",
@@ -57,8 +56,7 @@
         "test": "npm run build && nyc jasmine --config=./jasmine.json",
         "lint": "eslint --ext ts src/ tests/",
         "format": "prettier --write .",
-        "lint:fix": "eslint --ext ts src/ tests/ --fix",
-        "prepare": "husky install"
+        "lint:fix": "eslint --ext ts src/ tests/ --fix"
     },
     "nyc": {
         "all": true,
